force-app/main/default/objects/Test_Drive_Appointment__c/Test_Drive_Appointment__c.object-meta.xml
<CustomObject>
    <label>Test Drive Appointment</label>
    <nameField>
        <displayFormat>TDA-{000000}</displayFormat>
        <label>Test Drive Appointment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Drive Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>