force-app/main/default/objects/Test_Drive_Appointment__c/fields/Booked_By__c.field-meta.xml
<CustomField>
    <fullName>Booked_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booked By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Drive_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>