force-app/main/default/objects/Test_Drive_Appointment__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Test Drive Appointments</relationshipLabel>
    <relationshipName>Test_Drive_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>