force-app/main/default/objects/Test_Drive_Appointment__c/fields/Time_Slot__c.field-meta.xml
<CustomField>
    <fullName>Time_Slot__c</fullName>
    <label>Time Slot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>