force-app/main/default/objects/Test_Drive_Appointment__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Test Drive Appointments</relationshipLabel>
    <relationshipName>Test_Drive_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>